# miststar-mccbuilder

./: .gitignore  LICENSE  main.py  pyproject.toml
documents/: textcomps_intro.md
internal/: pyproject.toml
internal/internal/: __init__.py  exceptions.py  string.py
libs/miststar-serializer/: pyproject.toml
libs/miststar-serializer/serializer/: __init__.py  json_serializer.py
libs/miststar-textcomps/: pyproject.toml
libs/miststar-textcomps/textcomps/: __init__.py  builder.py  components.py  parser.py
miststar/internal/: __init__.py  dict_checking.py
miststar/serializer/: __init__.py
miststar/textcomps/: __init__.py  parser.py
src/miststar/: __init__.py
src/miststar/internal/: exceptions.py  int32.py  interval.py  simple_uuid.py
src/miststar/lexer/: lexer.py  token.py
src/miststar/localenv/: entity.py  localenv.py  player.py  scoreboard.py  tag.py
src/miststar/serializer/: json_serializer.py
src/miststar/textcomps/: __init__.py  builder.py  components.py  parser.py
src/string_operator/lexer/: lexer.py
src/string_operator/node/: node_with_type.py
src/string_operator/parser/: tokens_view.py
tests/: test_textcomps.py
tests/lexer/: test_lexer.py
tests/localenv/: test_scoreboard.py
tests/miststar/internal/: test_simple_uuid.py
typings/internal/: dict_checking.pyi  exceptions.pyi
