[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miststar-mccbuilder"
version = "0.3.2-alpha"
description = "Minecraft Command Builder"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "小白子lesomras", email = "lesomras@outlook.com" },
]
dependencies = [
    "blinker>=1.9.0",
    "path>=17.1.1",
]

[project.urls]
Homepage = "https://github.com/lesomPas/miststar-mccbuilder"
Repository = "https://github.com/lesomPas/miststar-mccbuilder"
Issues = "https://github.com/lesomPas/miststar-mccbuilder/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src/"]

[tool.mypy]
warn_return_any = false
warn_unused_configs = false
explicit_package_bases = false
strict_equality = true            # 禁止可疑的 == 比较（如 str vs int）
show_error_codes = true           # 显示错误码（方便搜索）
pretty = true                     # 错误信息更友好

