[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miststar-mccbuilder"
version = "0.4.0-alpha"
description = "Minecraft Command Builder"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "小白子lesomras", email = "lesomras@outlook.com" },
]
dependencies = [
    "path>=17.1.1",
]

[project.urls]
Homepage = "https://github.com/lesomPas/miststar-mccbuilder"
Repository = "https://github.com/lesomPas/miststar-mccbuilder"
Issues = "https://github.com/lesomPas/miststar-mccbuilder/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src/"]

[tool.mypy]
python_version = "3.10"
package_root = ["src", "tests"]
show_error_codes = true
pretty = true

[tool.pyright]
pythonVersion = "3.10"
include = ["src", "tests"]
typeCheckingMode = "standard"
